Task1_IIS/Scripts/template.json
{
    "$schema": "https://schema.management.azure.com/schemas/2015-01-01/deploymentTemplate.json#",
    "contentVersion": "1.0.0.0",
    "parameters": {
        "virtualMachines_vm1_name": {
            "defaultValue": "vm1",
            "type": "String"
        },
        "virtualMachines_VM2_name": {
            "defaultValue": "VM2",
            "type": "String"
        },
        "networkInterfaces_vm1174_name": {
            "defaultValue": "vm1174",
            "type": "String"
        },
        "networkInterfaces_vm2365_name": {
            "defaultValue": "vm2365",
            "type": "String"
        },
        "publicIPAddresses_vm1_ip_name": {
            "defaultValue": "vm1-ip",
            "type": "String"
        },
        "publicIPAddresses_VM2_ip_name": {
            "defaultValue": "VM2-ip",
            "type": "String"
        },
        "virtualNetworks_testVnet_name": {
            "defaultValue": "testVnet",
            "type": "String"
        },
        "loadBalancers_iisLoadBalancer_name": {
            "defaultValue": "iisLoadBalancer",
            "type": "String"
        },
        "publicIPAddresses_iisipaddress_name": {
            "defaultValue": "iisipaddress",
            "type": "String"
        },
        "networkSecurityGroups_testVM1_nsg_name": {
            "defaultValue": "testVM1-nsg",
            "type": "String"
        },
        "availabilitySets_testAvailabilitySet_name": {
            "defaultValue": "testAvailabilitySet",
            "type": "String"
        },
        "subnets_testsubnet_name": {
            "defaultValue": "testsubnet",
            "type": "String"
        },
        "securityRules_testRDPRule_name": {
            "defaultValue": "testRDPRule",
            "type": "String"
        },
        "securityRules_testHTTPRule_name": {
            "defaultValue": "testHTTPRule",
            "type": "String"
        },
        "securityRules_default_allow_rdp_name": {
            "defaultValue": "default-allow-rdp",
            "type": "String"
        },
        "virtualMachines_vm1_id": {
            "defaultValue": "/subscriptions/8bd4b226-317a-4920-8b92-4263326776ed/resourceGroups/Andrew-iis-Grp/providers/Microsoft.Compute/disks/vm1_OsDisk_1_1665ec03561b4c008b8e75a8ce29244a",
            "type": "String"
        },
        "virtualMachines_VM2_id": {
            "defaultValue": "/subscriptions/8bd4b226-317a-4920-8b92-4263326776ed/resourceGroups/Andrew-iis-Grp/providers/Microsoft.Compute/disks/VM2_OsDisk_1_4f7ac57b0a7b48fa815206932ba6dd09",
            "type": "String"
        },
        "loadBalancers_iisLoadBalancer_id": {
            "defaultValue": "/subscriptions/8bd4b226-317a-4920-8b92-4263326776ed/resourceGroups/Andrew-iis-Grp/providers/Microsoft.Network/loadBalancers/iisLoadBalancer/frontendIPConfigurations/LoadBalancerFrontEnd",
            "type": "String"
        },
        "loadBalancers_iisLoadBalancer_id_1": {
            "defaultValue": "/subscriptions/8bd4b226-317a-4920-8b92-4263326776ed/resourceGroups/Andrew-iis-Grp/providers/Microsoft.Network/loadBalancers/iisLoadBalancer/backendAddressPools/testBackEndPool",
            "type": "String"
        },
        "loadBalancers_iisLoadBalancer_id_2": {
            "defaultValue": "/subscriptions/8bd4b226-317a-4920-8b92-4263326776ed/resourceGroups/Andrew-iis-Grp/providers/Microsoft.Network/loadBalancers/iisLoadBalancer/probes/testHealthProbe",
            "type": "String"
        }
    },
    "variables": {},
    "resources": [
        {
            "comments": "Generalized from resource: '/subscriptions/8bd4b226-317a-4920-8b92-4263326776ed/resourceGroups/Andrew-iis-Grp/providers/Microsoft.Compute/availabilitySets/testAvailabilitySet'.",
            "type": "Microsoft.Compute/availabilitySets",
            "sku": {
                "name": "Aligned"
            },
            "name": "[parameters('availabilitySets_testAvailabilitySet_name')]",
            "apiVersion": "2017-03-30",
            "location": "eastus",
            "scale": null,
            "properties": {
                "platformUpdateDomainCount": 5,
                "platformFaultDomainCount": 2,
                "virtualMachines": [
                    {
                        "id": "[resourceId('Microsoft.Compute/virtualMachines', parameters('virtualMachines_vm1_name'))]"
                    },
                    {
                        "id": "[resourceId('Microsoft.Compute/virtualMachines', parameters('virtualMachines_VM2_name'))]"
                    }
                ]
            },
            "dependsOn": [
                "[resourceId('Microsoft.Compute/virtualMachines', parameters('virtualMachines_vm1_name'))]",
                "[resourceId('Microsoft.Compute/virtualMachines', parameters('virtualMachines_VM2_name'))]"
            ]
        },
        {
            "comments": "Generalized from resource: '/subscriptions/8bd4b226-317a-4920-8b92-4263326776ed/resourceGroups/Andrew-iis-Grp/providers/Microsoft.Compute/virtualMachines/vm1'.",
            "type": "Microsoft.Compute/virtualMachines",
            "name": "[parameters('virtualMachines_vm1_name')]",
            "apiVersion": "2017-03-30",
            "location": "eastus",
            "scale": null,
            "properties": {
                "availabilitySet": {
                    "id": "[resourceId('Microsoft.Compute/availabilitySets', parameters('availabilitySets_testAvailabilitySet_name'))]"
                },
                "hardwareProfile": {
                    "vmSize": "Standard_DS1_v2"
                },
                "storageProfile": {
                    "imageReference": {
                        "publisher": "MicrosoftWindowsServer",
                        "offer": "WindowsServer",
                        "sku": "2016-Datacenter",
                        "version": "latest"
                    },
                    "osDisk": {
                        "osType": "Windows",
                        "name": "[concat(parameters('virtualMachines_vm1_name'),'_OsDisk_1_1665ec03561b4c008b8e75a8ce29244a')]",
                        "createOption": "FromImage",
                        "caching": "ReadWrite",
                        "managedDisk": {
                            "storageAccountType": "Premium_LRS",
                            "id": "[parameters('virtualMachines_vm1_id')]"
                        },
                        "diskSizeGB": 128
                    },
                    "dataDisks": []
                },
                "osProfile": {
                    "computerName": "[parameters('virtualMachines_vm1_name')]",
                    "adminUsername": "andrew",
                    "windowsConfiguration": {
                        "provisionVMAgent": true,
                        "enableAutomaticUpdates": true
                    },
                    "secrets": []
                },
                "networkProfile": {
                    "networkInterfaces": [
                        {
                            "id": "[resourceId('Microsoft.Network/networkInterfaces', parameters('networkInterfaces_vm1174_name'))]"
                        }
                    ]
                },
                "diagnosticsProfile": {
                    "bootDiagnostics": {
                        "enabled": true,
                        "storageUri": "https://mbdatasciencediag.blob.core.windows.net/"
                    }
                }
            },
            "dependsOn": [
                "[resourceId('Microsoft.Compute/availabilitySets', parameters('availabilitySets_testAvailabilitySet_name'))]",
                "[resourceId('Microsoft.Network/networkInterfaces', parameters('networkInterfaces_vm1174_name'))]"
            ]
        },
        {
            "comments": "Generalized from resource: '/subscriptions/8bd4b226-317a-4920-8b92-4263326776ed/resourceGroups/Andrew-iis-Grp/providers/Microsoft.Compute/virtualMachines/VM2'.",
            "type": "Microsoft.Compute/virtualMachines",
            "name": "[parameters('virtualMachines_VM2_name')]",
            "apiVersion": "2017-03-30",
            "location": "eastus",
            "scale": null,
            "properties": {
                "availabilitySet": {
                    "id": "[resourceId('Microsoft.Compute/availabilitySets', parameters('availabilitySets_testAvailabilitySet_name'))]"
                },
                "hardwareProfile": {
                    "vmSize": "Standard_DS1_v2"
                },
                "storageProfile": {
                    "imageReference": {
                        "publisher": "MicrosoftWindowsServer",
                        "offer": "WindowsServer",
                        "sku": "2016-Datacenter",
                        "version": "latest"
                    },
                    "osDisk": {
                        "osType": "Windows",
                        "name": "[concat(parameters('virtualMachines_VM2_name'),'_OsDisk_1_4f7ac57b0a7b48fa815206932ba6dd09')]",
                        "createOption": "FromImage",
                        "caching": "ReadWrite",
                        "managedDisk": {
                            "storageAccountType": "Premium_LRS",
                            "id": "[parameters('virtualMachines_VM2_id')]"
                        },
                        "diskSizeGB": 128
                    },
                    "dataDisks": []
                },
                "osProfile": {
                    "computerName": "[parameters('virtualMachines_VM2_name')]",
                    "adminUsername": "andrew",
                    "windowsConfiguration": {
                        "provisionVMAgent": true,
                        "enableAutomaticUpdates": true
                    },
                    "secrets": []
                },
                "networkProfile": {
                    "networkInterfaces": [
                        {
                            "id": "[resourceId('Microsoft.Network/networkInterfaces', parameters('networkInterfaces_vm2365_name'))]"
                        }
                    ]
                },
                "diagnosticsProfile": {
                    "bootDiagnostics": {
                        "enabled": true,
                        "storageUri": "https://mbdatasciencediag.blob.core.windows.net/"
                    }
                }
            },
            "dependsOn": [
                "[resourceId('Microsoft.Compute/availabilitySets', parameters('availabilitySets_testAvailabilitySet_name'))]",
                "[resourceId('Microsoft.Network/networkInterfaces', parameters('networkInterfaces_vm2365_name'))]"
            ]
        },
        {
            "comments": "Generalized from resource: '/subscriptions/8bd4b226-317a-4920-8b92-4263326776ed/resourceGroups/Andrew-iis-Grp/providers/Microsoft.Network/loadBalancers/iisLoadBalancer'.",
            "type": "Microsoft.Network/loadBalancers",
            "sku": {
                "name": "Basic",
                "tier": "Regional"
            },
            "name": "[parameters('loadBalancers_iisLoadBalancer_name')]",
            "apiVersion": "2018-01-01",
            "location": "eastus",
            "scale": null,
            "properties": {
                "provisioningState": "Succeeded",
                "resourceGuid": "96e641a5-93e1-4483-a4fa-9863ed11fd6e",
                "frontendIPConfigurations": [
                    {
                        "name": "LoadBalancerFrontEnd",
                        "etag": "W/\"847403f2-67d6-4104-b0ba-ce50f36356c9\"",
                        "properties": {
                            "provisioningState": "Succeeded",
                            "privateIPAllocationMethod": "Dynamic",
                            "publicIPAddress": {
                                "id": "[resourceId('Microsoft.Network/publicIPAddresses', parameters('publicIPAddresses_iisipaddress_name'))]"
                            }
                        }
                    }
                ],
                "backendAddressPools": [
                    {
                        "name": "testBackEndPool",
                        "etag": "W/\"847403f2-67d6-4104-b0ba-ce50f36356c9\"",
                        "properties": {
                            "provisioningState": "Succeeded"
                        }
                    }
                ],
                "loadBalancingRules": [
                    {
                        "name": "testHTTPRule",
                        "etag": "W/\"847403f2-67d6-4104-b0ba-ce50f36356c9\"",
                        "properties": {
                            "provisioningState": "Succeeded",
                            "frontendIPConfiguration": {
                                "id": "[parameters('loadBalancers_iisLoadBalancer_id')]"
                            },
                            "frontendPort": 80,
                            "backendPort": 80,
                            "enableFloatingIP": false,
                            "idleTimeoutInMinutes": 4,
                            "protocol": "Tcp",
                            "loadDistribution": "Default",
                            "backendAddressPool": {
                                "id": "[parameters('loadBalancers_iisLoadBalancer_id_1')]"
                            },
                            "probe": {
                                "id": "[parameters('loadBalancers_iisLoadBalancer_id_2')]"
                            }
                        }
                    }
                ],
                "probes": [
                    {
                        "name": "testHealthProbe",
                        "etag": "W/\"847403f2-67d6-4104-b0ba-ce50f36356c9\"",
                        "properties": {
                            "provisioningState": "Succeeded",
                            "protocol": "Http",
                            "port": 80,
                            "requestPath": "HealthProbe.aspx",
                            "intervalInSeconds": 15,
                            "numberOfProbes": 2
                        }
                    }
                ],
                "inboundNatRules": [],
                "outboundNatRules": [],
                "inboundNatPools": []
            },
            "dependsOn": [
                "[resourceId('Microsoft.Network/publicIPAddresses', parameters('publicIPAddresses_iisipaddress_name'))]"
            ]
        },
        {
            "comments": "Generalized from resource: '/subscriptions/8bd4b226-317a-4920-8b92-4263326776ed/resourceGroups/Andrew-iis-Grp/providers/Microsoft.Network/networkInterfaces/vm1174'.",
            "type": "Microsoft.Network/networkInterfaces",
            "name": "[parameters('networkInterfaces_vm1174_name')]",
            "apiVersion": "2018-01-01",
            "location": "eastus",
            "scale": null,
            "properties": {
                "provisioningState": "Succeeded",
                "resourceGuid": "c46cc687-b9ac-4439-9ffa-3599fa407d66",
                "ipConfigurations": [
                    {
                        "name": "ipconfig1",
                        "etag": "W/\"3ab2d777-28bc-422f-9f54-02f0c8a69b3f\"",
                        "properties": {
                            "provisioningState": "Succeeded",
                            "privateIPAddress": "10.4.0.6",
                            "privateIPAllocationMethod": "Dynamic",
                            "publicIPAddress": {
                                "id": "[resourceId('Microsoft.Network/publicIPAddresses', parameters('publicIPAddresses_vm1_ip_name'))]"
                            },
                            "subnet": {
                                "id": "[resourceId('Microsoft.Network/virtualNetworks/subnets', parameters('virtualNetworks_testVnet_name'), parameters('subnets_testsubnet_name'))]"
                            },
                            "primary": true,
                            "privateIPAddressVersion": "IPv4",
                            "loadBalancerBackendAddressPools": [
                                {
                                    "id": "[concat(resourceId('Microsoft.Network/loadBalancers', parameters('loadBalancers_iisLoadBalancer_name')), '/backendAddressPools/testBackEndPool')]"
                                }
                            ]
                        }
                    }
                ],
                "dnsSettings": {
                    "dnsServers": [],
                    "appliedDnsServers": [],
                    "internalDomainNameSuffix": "kslw0osohguehj1ylwikvytolh.bx.internal.cloudapp.net"
                },
                "macAddress": "00-0D-3A-15-78-77",
                "enableAcceleratedNetworking": false,
                "enableIPForwarding": false,
                "networkSecurityGroup": {
                    "id": "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('networkSecurityGroups_testVM1_nsg_name'))]"
                },
                "primary": true,
                "virtualMachine": {
                    "id": "[resourceId('Microsoft.Compute/virtualMachines', parameters('virtualMachines_vm1_name'))]"
                }
            },
            "dependsOn": [
                "[resourceId('Microsoft.Network/publicIPAddresses', parameters('publicIPAddresses_vm1_ip_name'))]",
                "[resourceId('Microsoft.Network/virtualNetworks/subnets', parameters('virtualNetworks_testVnet_name'), parameters('subnets_testsubnet_name'))]",
                "[resourceId('Microsoft.Network/loadBalancers', parameters('loadBalancers_iisLoadBalancer_name'))]",
                "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('networkSecurityGroups_testVM1_nsg_name'))]",
                "[resourceId('Microsoft.Compute/virtualMachines', parameters('virtualMachines_vm1_name'))]"
            ]
        },
        {
            "comments": "Generalized from resource: '/subscriptions/8bd4b226-317a-4920-8b92-4263326776ed/resourceGroups/Andrew-iis-Grp/providers/Microsoft.Network/networkInterfaces/vm2365'.",
            "type": "Microsoft.Network/networkInterfaces",
            "name": "[parameters('networkInterfaces_vm2365_name')]",
            "apiVersion": "2018-01-01",
            "location": "eastus",
            "scale": null,
            "properties": {
                "provisioningState": "Succeeded",
                "resourceGuid": "a4a7ee72-19af-49ab-a0ce-e3c00576b64d",
                "ipConfigurations": [
                    {
                        "name": "ipconfig1",
                        "etag": "W/\"19f1febf-32ae-4f46-8b01-3c5ba92933ed\"",
                        "properties": {
                            "provisioningState": "Succeeded",
                            "privateIPAddress": "10.4.0.7",
                            "privateIPAllocationMethod": "Dynamic",
                            "publicIPAddress": {
                                "id": "[resourceId('Microsoft.Network/publicIPAddresses', parameters('publicIPAddresses_VM2_ip_name'))]"
                            },
                            "subnet": {
                                "id": "[resourceId('Microsoft.Network/virtualNetworks/subnets', parameters('virtualNetworks_testVnet_name'), parameters('subnets_testsubnet_name'))]"
                            },
                            "primary": true,
                            "privateIPAddressVersion": "IPv4",
                            "loadBalancerBackendAddressPools": [
                                {
                                    "id": "[concat(resourceId('Microsoft.Network/loadBalancers', parameters('loadBalancers_iisLoadBalancer_name')), '/backendAddressPools/testBackEndPool')]"
                                }
                            ]
                        }
                    }
                ],
                "dnsSettings": {
                    "dnsServers": [],
                    "appliedDnsServers": [],
                    "internalDomainNameSuffix": "kslw0osohguehj1ylwikvytolh.bx.internal.cloudapp.net"
                },
                "macAddress": "00-0D-3A-14-31-1D",
                "enableAcceleratedNetworking": false,
                "enableIPForwarding": false,
                "networkSecurityGroup": {
                    "id": "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('networkSecurityGroups_testVM1_nsg_name'))]"
                },
                "primary": true,
                "virtualMachine": {
                    "id": "[resourceId('Microsoft.Compute/virtualMachines', parameters('virtualMachines_VM2_name'))]"
                }
            },
            "dependsOn": [
                "[resourceId('Microsoft.Network/publicIPAddresses', parameters('publicIPAddresses_VM2_ip_name'))]",
                "[resourceId('Microsoft.Network/virtualNetworks/subnets', parameters('virtualNetworks_testVnet_name'), parameters('subnets_testsubnet_name'))]",
                "[resourceId('Microsoft.Network/loadBalancers', parameters('loadBalancers_iisLoadBalancer_name'))]",
                "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('networkSecurityGroups_testVM1_nsg_name'))]",
                "[resourceId('Microsoft.Compute/virtualMachines', parameters('virtualMachines_VM2_name'))]"
            ]
        },
        {
            "comments": "Generalized from resource: '/subscriptions/8bd4b226-317a-4920-8b92-4263326776ed/resourceGroups/Andrew-iis-Grp/providers/Microsoft.Network/networkSecurityGroups/testVM1-nsg'.",
            "type": "Microsoft.Network/networkSecurityGroups",
            "name": "[parameters('networkSecurityGroups_testVM1_nsg_name')]",
            "apiVersion": "2018-01-01",
            "location": "eastus",
            "scale": null,
            "properties": {
                "provisioningState": "Succeeded",
                "resourceGuid": "2b761a28-0f5a-43ec-9588-6853b2bfdb9c",
                "securityRules": [
                    {
                        "name": "default-allow-rdp",
                        "etag": "W/\"46fc18a4-8152-42ed-aca0-03134ca40304\"",
                        "properties": {
                            "provisioningState": "Succeeded",
                            "protocol": "TCP",
                            "sourcePortRange": "*",
                            "destinationPortRange": "3389",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 1000,
                            "direction": "Inbound",
                            "sourcePortRanges": [],
                            "destinationPortRanges": [],
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []
                        }
                    },
                    {
                        "name": "testHTTPRule",
                        "etag": "W/\"46fc18a4-8152-42ed-aca0-03134ca40304\"",
                        "properties": {
                            "provisioningState": "Succeeded",
                            "description": "Allow HTTP",
                            "protocol": "TCP",
                            "sourcePortRange": "*",
                            "destinationPortRange": "80",
                            "sourceAddressPrefix": "Internet",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 100,
                            "direction": "Inbound",
                            "sourcePortRanges": [],
                            "destinationPortRanges": [],
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []
                        }
                    },
                    {
                        "name": "testRDPRule",
                        "etag": "W/\"46fc18a4-8152-42ed-aca0-03134ca40304\"",
                        "properties": {
                            "provisioningState": "Succeeded",
                            "description": "Allow RDP",
                            "protocol": "TCP",
                            "sourcePortRange": "*",
                            "destinationPortRange": "3389",
                            "sourceAddressPrefix": "Internet",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 200,
                            "direction": "Inbound",
                            "sourcePortRanges": [],
                            "destinationPortRanges": [],
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []
                        }
                    }
                ],
                "defaultSecurityRules": [
                    {
                        "name": "AllowVnetInBound",
                        "etag": "W/\"46fc18a4-8152-42ed-aca0-03134ca40304\"",
                        "properties": {
                            "provisioningState": "Succeeded",
                            "description": "Allow inbound traffic from all VMs in VNET",
                            "protocol": "*",
                            "sourcePortRange": "*",
                            "destinationPortRange": "*",
                            "sourceAddressPrefix": "VirtualNetwork",
                            "destinationAddressPrefix": "VirtualNetwork",
                            "access": "Allow",
                            "priority": 65000,
                            "direction": "Inbound",
                            "sourcePortRanges": [],
                            "destinationPortRanges": [],
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []
                        }
                    },
                    {
                        "name": "AllowAzureLoadBalancerInBound",
                        "etag": "W/\"46fc18a4-8152-42ed-aca0-03134ca40304\"",
                        "properties": {
                            "provisioningState": "Succeeded",
                            "description": "Allow inbound traffic from azure load balancer",
                            "protocol": "*",
                            "sourcePortRange": "*",
                            "destinationPortRange": "*",
                            "sourceAddressPrefix": "AzureLoadBalancer",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 65001,
                            "direction": "Inbound",
                            "sourcePortRanges": [],
                            "destinationPortRanges": [],
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []
                        }
                    },
                    {
                        "name": "DenyAllInBound",
                        "etag": "W/\"46fc18a4-8152-42ed-aca0-03134ca40304\"",
                        "properties": {
                            "provisioningState": "Succeeded",
                            "description": "Deny all inbound traffic",
                            "protocol": "*",
                            "sourcePortRange": "*",
                            "destinationPortRange": "*",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "*",
                            "access": "Deny",
                            "priority": 65500,
                            "direction": "Inbound",
                            "sourcePortRanges": [],
                            "destinationPortRanges": [],
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []
                        }
                    },
                    {
                        "name": "AllowVnetOutBound",
                        "etag": "W/\"46fc18a4-8152-42ed-aca0-03134ca40304\"",
                        "properties": {
                            "provisioningState": "Succeeded",
                            "description": "Allow outbound traffic from all VMs to all VMs in VNET",
                            "protocol": "*",
                            "sourcePortRange": "*",
                            "destinationPortRange": "*",
                            "sourceAddressPrefix": "VirtualNetwork",
                            "destinationAddressPrefix": "VirtualNetwork",
                            "access": "Allow",
                            "priority": 65000,
                            "direction": "Outbound",
                            "sourcePortRanges": [],
                            "destinationPortRanges": [],
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []
                        }
                    },
                    {
                        "name": "AllowInternetOutBound",
                        "etag": "W/\"46fc18a4-8152-42ed-aca0-03134ca40304\"",
                        "properties": {
                            "provisioningState": "Succeeded",
                            "description": "Allow outbound traffic from all VMs to Internet",
                            "protocol": "*",
                            "sourcePortRange": "*",
                            "destinationPortRange": "*",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "Internet",
                            "access": "Allow",
                            "priority": 65001,
                            "direction": "Outbound",
                            "sourcePortRanges": [],
                            "destinationPortRanges": [],
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []
                        }
                    },
                    {
                        "name": "DenyAllOutBound",
                        "etag": "W/\"46fc18a4-8152-42ed-aca0-03134ca40304\"",
                        "properties": {
                            "provisioningState": "Succeeded",
                            "description": "Deny all outbound traffic",
                            "protocol": "*",
                            "sourcePortRange": "*",
                            "destinationPortRange": "*",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "*",
                            "access": "Deny",
                            "priority": 65500,
                            "direction": "Outbound",
                            "sourcePortRanges": [],
                            "destinationPortRanges": [],
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []
                        }
                    }
                ]
            },
            "dependsOn": []
        },
        {
            "comments": "Generalized from resource: '/subscriptions/8bd4b226-317a-4920-8b92-4263326776ed/resourceGroups/Andrew-iis-Grp/providers/Microsoft.Network/publicIPAddresses/iisipaddress'.",
            "type": "Microsoft.Network/publicIPAddresses",
            "sku": {
                "name": "Basic",
                "tier": "Regional"
            },
            "name": "[parameters('publicIPAddresses_iisipaddress_name')]",
            "apiVersion": "2018-01-01",
            "location": "eastus",
            "scale": null,
            "properties": {
                "provisioningState": "Succeeded",
                "resourceGuid": "9f178772-f016-47ce-a142-26d8e8139ee3",
                "ipAddress": "52.170.199.175",
                "publicIPAddressVersion": "IPv4",
                "publicIPAllocationMethod": "Dynamic",
                "idleTimeoutInMinutes": 4,
                "ipTags": []
            },
            "dependsOn": []
        },
        {
            "comments": "Generalized from resource: '/subscriptions/8bd4b226-317a-4920-8b92-4263326776ed/resourceGroups/Andrew-iis-Grp/providers/Microsoft.Network/publicIPAddresses/vm1-ip'.",
            "type": "Microsoft.Network/publicIPAddresses",
            "sku": {
                "name": "Basic",
                "tier": "Regional"
            },
            "name": "[parameters('publicIPAddresses_vm1_ip_name')]",
            "apiVersion": "2018-01-01",
            "location": "eastus",
            "scale": null,
            "properties": {
                "provisioningState": "Succeeded",
                "resourceGuid": "4c6d8fcd-59a4-4c4e-b96b-c303cec28d0c",
                "ipAddress": "52.234.227.69",
                "publicIPAddressVersion": "IPv4",
                "publicIPAllocationMethod": "Dynamic",
                "idleTimeoutInMinutes": 4,
                "ipTags": []
            },
            "dependsOn": []
        },
        {
            "comments": "Generalized from resource: '/subscriptions/8bd4b226-317a-4920-8b92-4263326776ed/resourceGroups/Andrew-iis-Grp/providers/Microsoft.Network/publicIPAddresses/VM2-ip'.",
            "type": "Microsoft.Network/publicIPAddresses",
            "sku": {
                "name": "Basic",
                "tier": "Regional"
            },
            "name": "[parameters('publicIPAddresses_VM2_ip_name')]",
            "apiVersion": "2018-01-01",
            "location": "eastus",
            "scale": null,
            "properties": {
                "provisioningState": "Succeeded",
                "resourceGuid": "0ffb877f-bf8d-4519-a7fd-e42abd329659",
                "ipAddress": "52.234.227.99",
                "publicIPAddressVersion": "IPv4",
                "publicIPAllocationMethod": "Dynamic",
                "idleTimeoutInMinutes": 4,
                "ipTags": []
            },
            "dependsOn": []
        },
        {
            "comments": "Generalized from resource: '/subscriptions/8bd4b226-317a-4920-8b92-4263326776ed/resourceGroups/Andrew-iis-Grp/providers/Microsoft.Network/virtualNetworks/testVnet'.",
            "type": "Microsoft.Network/virtualNetworks",
            "name": "[parameters('virtualNetworks_testVnet_name')]",
            "apiVersion": "2018-01-01",
            "location": "eastus",
            "scale": null,
            "properties": {
                "provisioningState": "Succeeded",
                "resourceGuid": "3a6d9754-394e-43a8-a778-5d90aae26e5f",
                "addressSpace": {
                    "addressPrefixes": [
                        "10.4.0.0/16"
                    ]
                },
                "subnets": [
                    {
                        "name": "testsubnet",
                        "etag": "W/\"e12276b7-78a6-44be-bbe7-847631ed60d5\"",
                        "properties": {
                            "provisioningState": "Succeeded",
                            "addressPrefix": "10.4.0.0/24"
                        }
                    }
                ],
                "virtualNetworkPeerings": [],
                "enableDdosProtection": false,
                "enableVmProtection": false
            },
            "dependsOn": []
        },
        {
            "comments": "Generalized from resource: '/subscriptions/8bd4b226-317a-4920-8b92-4263326776ed/resourceGroups/Andrew-iis-Grp/providers/Microsoft.Network/networkSecurityGroups/testVM1-nsg/securityRules/default-allow-rdp'.",
            "type": "Microsoft.Network/networkSecurityGroups/securityRules",
            "name": "[concat(parameters('networkSecurityGroups_testVM1_nsg_name'), '/', parameters('securityRules_default_allow_rdp_name'))]",
            "apiVersion": "2018-01-01",
            "scale": null,
            "properties": {
                "provisioningState": "Succeeded",
                "protocol": "TCP",
                "sourcePortRange": "*",
                "destinationPortRange": "3389",
                "sourceAddressPrefix": "*",
                "destinationAddressPrefix": "*",
                "access": "Allow",
                "priority": 1000,
                "direction": "Inbound",
                "sourcePortRanges": [],
                "destinationPortRanges": [],
                "sourceAddressPrefixes": [],
                "destinationAddressPrefixes": []
            },
            "dependsOn": [
                "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('networkSecurityGroups_testVM1_nsg_name'))]"
            ]
        },
        {
            "comments": "Generalized from resource: '/subscriptions/8bd4b226-317a-4920-8b92-4263326776ed/resourceGroups/Andrew-iis-Grp/providers/Microsoft.Network/networkSecurityGroups/testVM1-nsg/securityRules/testHTTPRule'.",
            "type": "Microsoft.Network/networkSecurityGroups/securityRules",
            "name": "[concat(parameters('networkSecurityGroups_testVM1_nsg_name'), '/', parameters('securityRules_testHTTPRule_name'))]",
            "apiVersion": "2018-01-01",
            "scale": null,
            "properties": {
                "provisioningState": "Succeeded",
                "description": "Allow HTTP",
                "protocol": "TCP",
                "sourcePortRange": "*",
                "destinationPortRange": "80",
                "sourceAddressPrefix": "Internet",
                "destinationAddressPrefix": "*",
                "access": "Allow",
                "priority": 100,
                "direction": "Inbound",
                "sourcePortRanges": [],
                "destinationPortRanges": [],
                "sourceAddressPrefixes": [],
                "destinationAddressPrefixes": []
            },
            "dependsOn": [
                "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('networkSecurityGroups_testVM1_nsg_name'))]"
            ]
        },
        {
            "comments": "Generalized from resource: '/subscriptions/8bd4b226-317a-4920-8b92-4263326776ed/resourceGroups/Andrew-iis-Grp/providers/Microsoft.Network/networkSecurityGroups/testVM1-nsg/securityRules/testRDPRule'.",
            "type": "Microsoft.Network/networkSecurityGroups/securityRules",
            "name": "[concat(parameters('networkSecurityGroups_testVM1_nsg_name'), '/', parameters('securityRules_testRDPRule_name'))]",
            "apiVersion": "2018-01-01",
            "scale": null,
            "properties": {
                "provisioningState": "Succeeded",
                "description": "Allow RDP",
                "protocol": "TCP",
                "sourcePortRange": "*",
                "destinationPortRange": "3389",
                "sourceAddressPrefix": "Internet",
                "destinationAddressPrefix": "*",
                "access": "Allow",
                "priority": 200,
                "direction": "Inbound",
                "sourcePortRanges": [],
                "destinationPortRanges": [],
                "sourceAddressPrefixes": [],
                "destinationAddressPrefixes": []
            },
            "dependsOn": [
                "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('networkSecurityGroups_testVM1_nsg_name'))]"
            ]
        },
        {
            "comments": "Generalized from resource: '/subscriptions/8bd4b226-317a-4920-8b92-4263326776ed/resourceGroups/Andrew-iis-Grp/providers/Microsoft.Network/virtualNetworks/testVnet/subnets/testsubnet'.",
            "type": "Microsoft.Network/virtualNetworks/subnets",
            "name": "[concat(parameters('virtualNetworks_testVnet_name'), '/', parameters('subnets_testsubnet_name'))]",
            "apiVersion": "2018-01-01",
            "scale": null,
            "properties": {
                "provisioningState": "Succeeded",
                "addressPrefix": "10.4.0.0/24"
            },
            "dependsOn": [
                "[resourceId('Microsoft.Network/virtualNetworks', parameters('virtualNetworks_testVnet_name'))]"
            ]
        }
    ]
}
